# Image-Enhancement

./: .gitignore  README.md  SETUP.md  format.ps1  pyproject.toml  requirements.txt  setup.ps1
docs/: RESUME_TRAINING.md
experiments/configs/: dncnn_gaussian_l2.yaml  pix2pix_motion_blur.yaml  unet_gaussian_l1.yaml
notebooks/: evaluation_example.ipynb  test_degradations.ipynb
notebooks/examples/: load_pretrained_example.ipynb  resume_training_example.ipynb
notebooks/test_degradations/: salt_and_pepper.ipynb  test_degradations.ipynb  test_gaussian_noise.ipynb
notebooks/test_trainings/attention_unet/gaussian/: attention_unet_gaussian_bilinear.ipynb  attention_unet_gaussian_bilinear_bottleneck.ipynb  attention_unet_gaussian_upsample.ipynb  attention_unet_gaussian_upsample_v2.ipynb
report_generators/: generate_comparison_report.py  generate_evaluation_concat.py  generate_experiment_summaries.py  generate_hyperparams_metrics.py
src/degradations/: __init__.py  gaussian_noise.py  generate_degraded_dataset.py  quantization_dithering.py  salt_and_pepper.py
src/evaluation/: __init__.py  evaluator.py  inference.py  metrics.py
src/losses/: __init__.py  combined_loss.py  perceptual_loss.py
src/models/: __init__.py  attention_unet.py  denoising_autoencoder.py  dncnn.py  ffdnet.py  pix2pix.py  unet.py  unet_residual.py
src/training/: __init__.py  dataset.py  trainer.py  training.py  training_pix2pix.py  training_utils.py
src/utils/: __init__.py  checkpoints.py  download_dataset.py  experiment.py  paths.py  telegram_notifier.py  visualization.py
(+14 files in other folders)
